--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "apexcharts": "^3.37.3",
     "axios": "^1.3.5",
     "react": "^18.2.0",
@@ -16,7 +17,11 @@
     "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.2",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
